fix: dark mode link color

--- a/src/ionic-ng/src/theme/variables.scss
+++ b/src/ionic-ng/src/theme/variables.scss
@@ -126,6 +126,8 @@ body.dark {
   --ion-color-light-shade: #1e2023;
   --ion-color-light-tint: #383a3e;
 
+  --link-color: #5e6fff;
+
   --logo-icon-background-color: var(--ion-color-dark);
   --logo-icon-foreground-color: var(--ion-color-light);
 }
